# magmatis

./: .clang-format  .clangd  .gitignore  compile_commands.json  default.nix  flake.nix  meson.build  result
lib/: whereami.c  whereami.h
src/: main.c  program_info.h
src/common/: list.c  list.h
src/core/: buffer.c  buffer.h  command.c  command.h  device.c  device.h  event.c  event.h  framebuffer.c  framebuffer.h  image.c  image.h  instance.c  instance.h  magmatis.c  magmatis.h  memory.c  memory.h  pipeline.c  pipeline.h  queue.c  queue.h  render.c  render.h  swapchain.c  swapchain.h  sync.c  sync.h  texture.c  texture.h  uniform.c  uniform.h  vertex.c  vertex.h  window.c  window.h
src/extra/: colors.h
src/io/: file.c  file.h
